--- a/aboutus.html
+++ b/aboutus.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>找吧!好用APP!|關於我們|</title>
     <link rel="stylesheet" href="css/aboutus.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/headerFooter.css">
+    <link rel="icon" href="img/WishesMan.png">
 </head>
 <body>
     <div class="header">
         <div class="logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
         <div class="menu">
             <ul>
-                <li><a href="#">關於我們</a></li>
-                <li><a href="#">常見問題</a></li>
-                <li><a href="#">尋找APP</a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
                 <li><a href="#"><img src="img/LoginWhite.png" alt=""></a></li>
                 <li><a href="#"><img src="img/RegisterBlue.png" alt=""></a></li>
             </ul>
