--- a/introAppPokemonbrushteeth.html
+++ b/introAppPokemonbrushteeth.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>找吧!好用APP!|APP介紹|Pokémon Smile|</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/headerFooter.css">
     <link rel="stylesheet" href="css/pokemonBrushTeeth.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="icon" href="img/WishesMan.png">
 </head>
 <body>
     <div class="header">
         <div class="logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
         <div class="menu">
             <ul>
-                <li><a href="#">關於我們</a></li>
-                <li><a href="#">常見問題</a></li>
-                <li><a href="#">尋找APP</a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
                 <li><a href="#"><img src="img/LoginWhite.png" alt=""></a></li>
                 <li><a href="#"><img src="img/RegisterBlue.png" alt=""></a></li>
             </ul>
@@ -31,7 +32,7 @@
             <h1>推薦程度★★★★</h1>
         </div>
             <div class="wrapText">
-            <h1>寶可夢刷牙</h1>
+            <h1>Pokémon Smile</h1>
             <h2>『Pokémon Smile』是個可以愉快地和寶可夢一起養成刷牙習慣的遊戲應用程式。
 
 
