--- a/login.html
+++ b/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>找吧!好用APP!|註冊</title>
+    <title>找吧!好用APP!|登入</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/headerFooter.css">
-    <link rel="stylesheet" href="css/register.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
     <div class="header">
@@ -25,11 +25,6 @@
         <form id="form" action="/">
             <h1>用戶註冊</h1>
             <div class="input-control">
-                <label for="username">用戶名</label>
-                <input type="text" id="username" name="username" placeholder="請輸入帳號" >
-                <div class="error"></div>
-            </div>
-            <div class="input-control">
                 <label for="email">郵件</label>
                 <input type="text" id="email" name="email" placeholder="請輸入電子郵件" >
                 <div class="error"></div>
@@ -37,11 +32,6 @@
             <div class="input-control">
                 <label for="password">密碼</label>
                 <input type="text" id="password" name="password" placeholder="請輸入密碼" >
-                <div class="error"></div>
-            </div>
-            <div class="input-control">
-                <label for="password2">請再次輸入密碼</label>
-                <input type="text" id="password2" name="password2" placeholder="請再次輸入密碼" >
                 <div class="error"></div>
             </div>
             <button type="submit"> 註冊</button>
@@ -54,7 +44,7 @@
         <p>前端面試作品專用</p>
     </div>
 
-    <script src="js/register.js"></script>
+    <script src="js/login.js"></script>
     
 </body>
 </html>
