--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>找吧!好用APP!</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="icon" href="img/WishesMan.png">
     <link rel="icon" href="img/WishesMan.png">
 </head>
 <body>
@@ -21,7 +23,28 @@
             </ul>
         </div>
     </div>
-    <div class="container">
+
+
+    <div class="off-screen-menu">
+        <ul>
+            <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
+            <li><a href="#"><img src="img/LoginWhite.png" alt=""></a></li>
+            <li><a href="#"><img src="img/RegisterBlue.png" alt=""></a></li>
+        </ul>
+    </div>
+
+    <div class="top">
+        <div class="ham-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+
+
+    <div class="container1">
         <div class="title">
             <div class="intro">
                 <h1>我們只蒐集好用的APP</h1>
@@ -32,7 +55,7 @@
             </div>
             <img src="img/Desktop_kv.jpg" alt="">
         </div>
-        <div class="card">
+        <div class="card1">
             <img src="img/FabulousCard.jpg" alt="">
             <img src="img/DiaryCard.jpg" alt="">
             <img src="img/TezzaCard.jpg" alt="">
@@ -70,5 +93,7 @@
         <p>Designed by Den | © 2024</p>
         <p>前端面試作品專用</p>
     </div>
+
+    <script src="js/ham.js"></script>
 </body>
 </html>
