--- a/aboutus.html
+++ b/aboutus.html
@@ -7,21 +7,42 @@
     <link rel="stylesheet" href="css/aboutus.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/headerFooter.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="icon" href="img/WishesMan.png">
 </head>
 <body>
     <div class="header">
-        <div class="logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
+        <div class="logo"><a href="https://gebyman.github.io/Search-My-App/index.html"><img src="img/logo.png" alt=""></a></div>
         <div class="menu">
             <ul>
                 <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
-                <li><a href="#"><img src="img/LoginWhite.png" alt=""></a></li>
-                <li><a href="#"><img src="img/RegisterBlue.png" alt=""></a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/login.html"><img src="img/LoginWhite.png" alt=""></a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/register.html"><img src="img/RegisterBlue.png" alt=""></a></li>
             </ul>
         </div>
     </div>
+
+
+    <div class="off-screen-menu">
+        <ul>
+            <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/login.html"><img src="img/LoginWhite.png" alt=""></a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/register.html"><img src="img/RegisterBlue.png" alt=""></a></li>
+        </ul>
+    </div>
+
+    <div class="top">
+        <div class="ham-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+    
     <div class="container">
             <h2>關於我們</h2>
             <p>我們希望建立一個平台，分享各APP資訊、評分與使用心得等。<br>
@@ -33,5 +54,7 @@
         <p>Designed by Den | © 2024</p>
         <p>前端面試作品專用</p>
     </div>
+
+    <script src="js/ham.js"></script>
 </body>
 </html>
