--- a/question.html
+++ b/question.html
@@ -11,17 +11,38 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
+        <div class="logo"><a href="https://gebyman.github.io/Search-My-App/index.html"><img src="img/logo.png" alt=""></a></div>
         <div class="menu">
             <ul>
                 <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
-                <li><a href="#"><img src="img/LoginWhite.png" alt=""></a></li>
-                <li><a href="#"><img src="img/RegisterBlue.png" alt=""></a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/login.html"><img src="img/LoginWhite.png" alt=""></a></li>
+                <li><a href="https://gebyman.github.io/Search-My-App/register.html"><img src="img/RegisterBlue.png" alt=""></a></li>
             </ul>
         </div>
     </div>
+
+
+    <div class="off-screen-menu">
+        <ul>
+            <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/login.html"><img src="img/LoginWhite.png" alt=""></a></li>
+            <li><a href="https://gebyman.github.io/Search-My-App/register.html"><img src="img/RegisterBlue.png" alt=""></a></li>
+        </ul>
+    </div>
+
+    <div class="top">
+        <div class="ham-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+
+    
     <div class="container">
         <h2>常見問題</h2>
     <p>密碼忘記了該怎麼辦?<br>
@@ -40,5 +61,6 @@
         <p>Designed by Den | © 2024</p>
         <p>前端面試作品專用</p>
     </div>
+    <script src="js/ham.js"></script>
 </body>
 </html>
