--- a/introAppRush.html
+++ b/introAppRush.html
@@ -15,6 +15,7 @@
         <div class="logo"><a href="https://gebyman.github.io/Search-My-App/index.html"><img src="img/logo.png" alt=""></a></div>
         <div class="menu">
             <ul>
+                <li><a href="https://gebyman.github.io/Search-My-App/index.html">首頁</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
@@ -27,6 +28,7 @@
 
     <div class="off-screen-menu">
         <ul>
+            <li><a href="https://gebyman.github.io/Search-My-App/index.html">首頁</a></li>
             <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
             <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
             <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
