--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
         <div class="logo"><a href="https://gebyman.github.io/Search-My-App/index.html"><img src="img/logo.png" alt=""></a></div>
         <div class="menu">
             <ul>
+                <li><a href="https://gebyman.github.io/Search-My-App/index.html">首頁</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
                 <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
@@ -25,6 +26,7 @@
 
     <div class="off-screen-menu">
         <ul>
+            <li><a href="https://gebyman.github.io/Search-My-App/index.html">首頁</a></li>
             <li><a href="https://gebyman.github.io/Search-My-App/aboutus.html">關於我們</a></li>
             <li><a href="https://gebyman.github.io/Search-My-App/question.html">常見問題</a></li>
             <li><a href="https://gebyman.github.io/Search-My-App/findApp.html">尋找APP</a></li>
@@ -42,7 +44,7 @@
     </div>
     <div class="container">
         <form id="form" action="/">
-            <h1>用戶註冊</h1>
+            <h1>用戶登入</h1>
             <div class="input-control">
                 <label for="email">郵件</label>
                 <input type="text" id="email" name="email" placeholder="請輸入電子郵件" >
@@ -53,7 +55,7 @@
                 <input type="text" id="password" name="password" placeholder="請輸入密碼" >
                 <div class="error"></div>
             </div>
-            <button type="submit"> 註冊</button>
+            <button type="submit"> 登入</button>
         </form>
     </div>
 
