--- a/aboutus.html
+++ b/aboutus.html
@@ -36,7 +36,13 @@
             <li><a href="https://gebyman.github.io/Search-My-App/register.html"><img src="img/RegisterBlue.png" alt=""></a></li>
         </ul>
     </div>
-    
+    <div class="top">
+        <div class="ham-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
     <div class="container">
             <h2>關於我們</h2>
             <p>我們希望建立一個平台，分享各APP資訊、評分與使用心得等。<br>
