--- a/findApp.html
+++ b/findApp.html
@@ -36,7 +36,13 @@
             <li><a href="https://gebyman.github.io/Search-My-App/register.html"><img src="img/RegisterBlue.png" alt=""></a></li>
         </ul>
     </div>
-
+    <div class="top">
+        <div class="ham-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
 
     <div class="container">
         <div class="category">
